<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="100"
        android:title="@string/fav"
        android:icon="@drawable/star_hotel_96"
        app:showAsAction="always"
        ></item>
    <item
        android:id="@+id/action_contacts"
        android:orderInCategory="200"
        android:title="@string/contact"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="300"
        android:title="@string/about"
        app:showAsAction="collapseActionView"></item>
    <item
        android:id="@+id/action_notification"
        android:orderInCategory="500"
        android:title="@string/receive_notifications"
        app:showAsAction="collapseActionView"
        ></item>

    <item
        android:id="@+id/action_account"
        android:orderInCategory="400"
        android:title="@string/accountCOnfig"
        app:showAsAction="collapseActionView"></item>



</menu>